--- a/clock.html
+++ b/clock.html
@@ -10,7 +10,8 @@
 <body translate="no" >
   <div id="output"></div>
 
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.27/moment-timezone-with-data.min.js'></script>
   <script>
 // https://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-javascript
 var urlParams;
@@ -20,19 +21,23 @@ var urlParams;
         search = /([^&=]+)=?([^&]*)/g,
         decode = function (s) { return decodeURIComponent(s.replace(pl, " ")); },
         query  = window.location.search.substring(1);
+
     urlParams = {};
     while (match = search.exec(query))
        urlParams[decode(match[1])] = decode(match[2]);
 })();
+
 var output = document.getElementById("output");
 if (urlParams["style"]) output.setAttribute("style", urlParams["style"]);
 if (urlParams["bodyStyle"]) document.body.setAttribute("style", urlParams["bodyStyle"]);
+
 var c;
 setInterval(
 c = function() {
-  output.innerText = moment().tz("America/New_York").format(urlParams["format"] || '');
+  output.innerText = moment().tz('America/New_York').format(urlParams["format"] || '');
 }, 1000);
 c();
+
   </script>
 </body>
 </html>
