--- a/clock.html
+++ b/clock.html
@@ -11,7 +11,7 @@
   <style>
         .clock {
             font: bold 18px consolas;
-            <!-- color:white; -->
+            color:white;
             display: inline-block;
             border-radius: 5px;
             padding: 2px 5px;
