--- a/clock.html
+++ b/clock.html
@@ -23,7 +23,7 @@
 <body translate="no" >
   <div class="clock">
     <p id="output"></p>
-    <p>AXON BODY 2 A08-3694</p>
+    <p>AXON BODY 2 208-SASP Trooper</p>
   </div>
   <script>
 // https://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-javascript
