--- a/clock.html
+++ b/clock.html
@@ -13,8 +13,8 @@
             font: bold 20px consolas;
             color:white;
             display: inline-block;
-            border-radius: 3px;
-            padding: 2px 3px;
+            border-radius: 2px;
+            padding: 1px 2px;
             background-colour: rgba(0,0,0,0,5);
         }
     </style>
@@ -23,7 +23,8 @@
 <body translate="no" >
   <div class="clock">
     <p id="output"></p>
-    <p>AXON BODY 2 208-SASP Trooper</p>
+    <p>AXON BODY 2 </p>
+    <p>208-SASP Trooper</p>
   </div>
   <script>
 // https://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-javascript
