--- a/clock.html
+++ b/clock.html
@@ -22,9 +22,8 @@
 
 <body translate="no" >
   <div class="clock">
+    <p>AXON BODY 2 - SASP Trooper 208</p>
     <p id="output"></p>
-    <p>AXON BODY 2 </p>
-    <p>208-SASP Trooper</p>
   </div>
   <script>
 // https://stackoverflow.com/questions/901115/how-can-i-get-query-string-values-in-javascript
